shaku/tests/ui/resolve_unregistered_component.stderr
error[E0277]: the trait bound `TestModule: shaku::module::HasComponent<(dyn ServiceTrait + 'static)>` is not satisfied
  --> $DIR/resolve_unregistered_component.rs:21:29
   |
21 |     let service = container.resolve_ref::<dyn ServiceTrait>();
   |                             ^^^^^^^^^^^ the trait `shaku::module::HasComponent<(dyn ServiceTrait + 'static)>` is not implemented for `TestModule`
